intel/bench_214_work/extr_.linuxdriversvideofbdevsisinit.c_SiS_GetModeID_with_main/log.txt
bench_214_work/extr_.linuxdriversvideofbdevsisinit.c_SiS_GetModeID_with_main/extr_.linuxdriversvideofbdevsisinit.c_SiS_GetModeID_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
